bases del juego

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>juego piedra,papel o tigeras</title>
 </head>
 <body>
-    
+    <button id="piedra">piedra</button>
+    <button id="papel">papel</button>
+    <button id="tigera">tigera</button>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
