--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="archivos/style.css">
     <title>juego piedra,papel o tigeras</title>
 </head>
 <body>
-    <button id="piedra">piedra</button>
-    <button id="papel">papel</button>
-    <button id="tigera">tigera</button>
-
+    <div class="colorPagina">
+    <button id="piedra"><img src="archivos/imagenes/Rock.jpeg" alt="piedra" id="img"></button>
+    <button id="papel"><img src="archivos/imagenes/Paper.jpeg" alt="papel" id="img"></button>
+    <button id="tigera"><img src="archivos/imagenes/Scissors.jpeg" alt="tigera" id="img"></button>
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
