--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="archivos/style.css">
-    <title>juego piedra,papel o tigeras</title>
+    <title>Piedra, Papel, Tijera</title>
 </head>
 <body>
     <div class="colorPagina">
@@ -12,6 +12,7 @@
     <button id="papel"><img src="archivos/imagenes/Paper.jpeg" alt="papel" id="img"></button>
     <button id="tigera"><img src="archivos/imagenes/Scissors.jpeg" alt="tigera" id="img"></button>
     </div>
+    <p id="resultado"></p>
     <script src="js/app.js"></script>
 </body>
 </html>
