--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="colorPagina">
+        <h1>juego de piedra, papel, o tigera</h1>
     <button id="piedra"><img src="archivos/imagenes/Rock.jpeg" alt="piedra" id="img"></button>
     <button id="papel"><img src="archivos/imagenes/Paper.jpeg" alt="papel" id="img"></button>
     <button id="tigera"><img src="archivos/imagenes/Scissors.jpeg" alt="tigera" id="img"></button>
