--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <p id="victorias">Victorias: 0</p>
     <p id="derrotas">Derrotas: 0</p>
     <script src="js/app.js"></script>
+    <footer>
+        <p>Creado por: <a href="https://github.com/juban1234/juego-piedra-papel-y-tigera.git" target="_blank">Juan esteban grajales</a></p>
+    </footer>
 </body>
 </html>
